--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                      <input type="text" class="email-bt" placeholder="Phone Numbar" name="Email">
                   </div>
                   <div class="form-group">
-                     <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Message"></textarea>
+                     <textarea class="massage-bt" placeholder="Message" rows="5" id="comment" name="Message"></textarea>
                   </div>
                </form>
                <div class="send_btn"><a href="#">SEND</a></div>
