--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                            <div class="col-md-5">
                               <h1 class="banner_taital">Samsung Galaxy Z Fold</h1>
                               <p class="banner_text">Infinite Possibilities, Folded into One  </p>
-                              <div class="contact_bt"><a href="contact.html">Buy Now</a></div>
+                              <div class="contact_bt"><a href="#">Buy Now</a></div>
                            </div>
                         </div>
                      </div>
